최종 업로드 파일 이동 & 썸네일 생성 비동기 체이닝
썸네일 이벤트는 kafka 도입